--- a/punto-1-3/index.html
+++ b/punto-1-3/index.html
@@ -42,8 +42,9 @@
             <div>
                 <div>
                     <h1>Aprovecha la era digital, toma clases en línea</h1>
-                    <p>Toma los cursos más importante de tecnología con clases en línea. donde podrás tener acceso a
-                        contenido actualizado desde la comodidad de tu casa y a tu ritmo</p>
+                    <p>Toma los cursos más importante de tecnología con clases en línea,
+                     donde podrás tener acceso a contenido actualizado desde la comodidad  
+                     de tu casa y a tu ritmo.</p>
                 </div>
                 <div>
                     <button class="button--orange">Saber más</button>
